--- a/components/a.html
+++ b/components/a.html
@@ -14,22 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script>
 </head>
 <body>
-    <div id=app>
-        <item-desc v-bind:item-name='myItem'></item-desc>
-    </div>
-    <script>
-        Vue.component('item-desc', {
-            props:{
-                itemName:{
-                    type: String
-                }
-            },
-            template: '<p>{{ itemName }}은 편리해</p>'
-        })
-        new Vue({
-            el: '#app',
-            data: { myItem: 'pen'}
-        })
-    </script>
+    <div></div>
+    <script></script>
 </body>
 </html>
